# online-course-management-system

./: .gitignore  README.md  pyproject.toml  pytest.ini
apps/courses/: admin.py  managers.py  models.py  pagination.py  permissions.py  serializers.py  test_courses_lectures.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_course_unique_course_per_owner.py  0002_initial.py  0003_lecture.py
apps/courses/services/: __init__.py  course.py  protocols.py  relationship_manager.py  user.py
apps/courses/services/dtos/: __init__.py  course.py  lecture.py  user.py
apps/courses/services/lecture/: __init__.py  services.py  validation.py
apps/homeworks/: admin.py  models.py  pagination.py  serializers.py  test_homeworks.py  urls.py  views.py
apps/homeworks/migrations/: 0001_initial.py  0002_initial.py  0003_homeworkgrade.py  0004_gradecomment.py
apps/homeworks/services/: __init__.py  protocols.py
apps/users/: admin.py  auth_views.py  managers.py  models.py  serializers.py  services.py  urls.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py  0003_alter_user_options_alter_user_role.py  0004_make_name_fields_required.py
apps/users/permissions/: __init__.py  blacklist.py
apps/users/serializers/: __init__.py  auth.py  user.py
apps/users/services/: __init__.py  authentication.py  logout.py  registration.py  token_blacklist.py  user_service.py
apps/users/views/: __init__.py  auth.py  user.py
common/: enums.py
config/: settings.py  urls.py
docs/: openapi.yaml
(+27 files in other folders)
